--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">Tic-Tac-Toe</div>
+        <div class=" startButton">
+            <button type='button' class="start">Start/Reset</button>
+        </div>
+        <h1 class="turn"></h1>
+        <div class="board"></div>
+    </div>
 </body>
 </html>
